welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: value update is not a member of String
	if(litMessage() = "A"){
           ^BDRBuggle:5: error: value update is not a member of String
	if(litMessage() = "B"){
           ^BDRBuggle:9: error: value update is not a member of String
	if(litMessage() = "R"){
           ^BDRBuggle:13: error: value update is not a member of String
	if(litMessage() = "L"){
           ^BDRBuggle:17: error: value update is not a member of String
	if(litMessage() = "I"){
           ^BDRBuggle:22: error: value update is not a member of String
	if(litMessage() = "C"){
           ^BDRBuggle:27: error: value update is not a member of String
	if(litMessage() = "Z"){
           ^BDRBuggle:30: error: value update is not a member of String
	if(litMessage() = "Y"){
           ^BDRBuggle:34: error: value update is not a member of String
	if(litMessage() = "Z"){
           ^